Fixed Overflow on Slide Component

--- a/src/components/slide/slide.css
+++ b/src/components/slide/slide.css
@@ -105,6 +105,10 @@
     align-items: center;
 }
 
+.overflow-content {
+    overflow-y: scroll;
+}
+
 .slick-slide img {
     display: flex;
 }
